--- a/application/bp/authentication/templates/login.html
+++ b/application/bp/authentication/templates/login.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
-    {% from 'bootstrap5/form.html' import render_form, render_field, render_form_row %}
+{% from 'bootstrap5/form.html' import render_form %}
 
 {% block title %}Login{% endblock %}
 {% block content %}
 
 <h1>Login Form</h1>
 
-    {{ render_form(form) }}
+{% if message %}
+{{ message }}
+{% endif %}
+
+{{ render_form(form) }}
 
 {% endblock %}
